--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -12,7 +12,7 @@
     <% @week_days.each do |day| %>
       <div class='item'>
         <div class='date'>
-          <% day[:month] %>/<% day[:date] %>
+          <%= day[:month] %>/<%= day[:date] %><%= day[:wdays]%>
         </div>
         <ul class='content'>
         <% if day[:plans].length != 0 %>
@@ -24,6 +24,3 @@
       </div>
     <% end %>
   </div>
-
-樋口様申し訳ございません
-通話が切れてしまってましたので、もう一度リクエストお願いいたします
